# stm32_speech_commands

./: .gitignore  .pre-commit-config.yaml  README.md  browser_demo_inference.html  dataset_mean.py  eval.py  pyproject.toml  test.py  train.py
api/: train.py
browser_inference/: browser_demo_inference.html
model_training/: dataset.py  dataset_mean.py  model.onnx  models.py  pyproject.toml  test.py  train.py
model_training/checkpoints/: m5-c16-k80-ep28.ckpt  m5-c32-k10-ep12.ckpt  m5-c32-k10-ep25.ckpt  m5-c32-k20-ep29.ckpt  m5-c32-k40-ep26.ckpt  m5-c32-k80-ep23.ckpt
src/: collate.py  dataset.py  models.py  test.py  train.py  util.py
stm32_inference/: .mxproject  Makefile  STM32L475VGTx_FLASH.ld  speech_generate_report.txt  speechmodel_code.ioc
stm32_inference/.ai/: speech_model.onnx_c_graph.json  speech_model.onnx_report.json  speech_model_onnx_8000hz.onnx_c_graph.json  speech_model_onnx_8000hz.onnx_report.json  speech_speech_4khz.onnx_c_graph.json  speech_speech_4khz.onnx_report.json
stm32_inference/Inc/: app_x-cube-ai.h  speech.h  speech_config.h  speech_data.h  speech_data_params.h  stm32l4xx_it.h
stm32_inference/Src/: app_x-cube-ai.c  main.c  speech.c  speech_data.c  speech_data_params.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
