[project]
name = "model-training"
version = "0.1.0"
description = "Speech commands 1D cnn training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "onnx>=1.19.1",
    "pytorch-lightning>=2.5.5",
    "torch >=2.0.0",
    "torchaudio >=2.0.0",
    "torchcodec>=0.8.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchaudio = [
  { index = "pytorch-cpu" },
]
